--- a/beranda.html
+++ b/beranda.html
@@ -16,7 +16,7 @@
         <a href="beranda.html" class="text-white px-3 py-2 rounded hover:bg-blue-500">Home</a>
         <a href="produk.html" class="text-white px-3 py-2 rounded hover:bg-blue-500">Produk & Layanan</a>
         <a href="mekanik.html" class="text-white px-3 py-2 rounded hover:bg-blue-500">Booking</a>
-        <a href="transaksi.html" class="text-white px-3 py-2 rounded hover:bg-blue-500">Transaksi</a>
+        <a href="bengkel.html" class="text-white px-3 py-2 rounded hover:bg-blue-500">Transaksi</a>
       </nav>
       <div>
         <input type="text" placeholder="Search" class="form-control d-inline-block w-auto">
